crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__nodes_tests__sibling_children.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/nodes_tests.rs
---
Q = (block
    (statement)
    (statement)
    (statement))
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      Id "block"
      Tree
        ParenOpen "("
        Id "statement"
        ParenClose ")"
      Tree
        ParenOpen "("
        Id "statement"
        ParenClose ")"
      Tree
        ParenOpen "("
        Id "statement"
        ParenClose ")"
      ParenClose ")"
