crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__nodes_tests__supertype_in_alternation.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/nodes_tests.rs
---
Q = [(expression/identifier) (expression/number)]
---
Root
  Def
    Id "Q"
    Equals "="
    Alt
      BracketOpen "["
      Branch
        Tree
          ParenOpen "("
          Id "expression"
          Slash "/"
          Id "identifier"
          ParenClose ")"
      Branch
        Tree
          ParenOpen "("
          Id "expression"
          Slash "/"
          Id "number"
          ParenClose ")"
      BracketClose "]"
