crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__nodes_tests__supertype_with_capture.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/nodes_tests.rs
---
Q = (expression/binary_expression) @expr
---
Root
  Def
    Id "Q"
    Equals "="
    Capture
      Tree
        ParenOpen "("
        Id "expression"
        Slash "/"
        Id "binary_expression"
        ParenClose ")"
      CaptureToken "@expr"
