crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__nodes_tests__wildcard.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/nodes_tests.rs
---
Q = (_)
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      Underscore "_"
      ParenClose ")"
